@@ -1,3 +1,7 @@
+drkns 30.12.2020 08:24:39 +0000 - build 5721
+
+1. Версии модулей в информации об исключении.
+
 MZK 26.12.2020 16:10:32 -0800 - build 5720
 
 1. `Alt+<Gray *>` инвертирует пометку только на файлах, исключая папки.
